--- a/AlMohamyProject/Views/User/Edit.cshtml
+++ b/AlMohamyProject/Views/User/Edit.cshtml
@@ -22,12 +22,12 @@
                 <input asp-for="Email" readonly class="form-control" />
                 <input asp-for="Email" hidden />
             </div>
-            <div class="form-group">
+          @*  <div class="form-group">
                 <label asp-for="RoleId"></label>
                 <select name="RoleId" asp-items="@(new SelectList(ViewBag.cities , "Id" , "Name"))"  class="form-control">
                     <option disabled selected>--Select Role--</option>
                 </select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <button type="submit" class="btn btn-success">Update</button>
                 <a asp-action="Index" class="btn btn-warning" style="width:auto">Back to User</a>
