--- a/AlMohamyProject/Areas/Admin/Views/ApprovedOffice/Form.cshtml
+++ b/AlMohamyProject/Areas/Admin/Views/ApprovedOffice/Form.cshtml
@@ -29,7 +29,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-                    <form enctype="multipart/form-data" method="post" role="form" asp-area="Admin" asp-controller="ApprovedOffice" asp-action="Save">
+                    <form id="form" enctype="multipart/form-data" method="post" role="form" asp-area="Admin" asp-controller="ApprovedOffice" asp-action="Save">
                 <div class="card-body">
                             <div asp-validation-summary="All" class="text-danger"></div>
                   <div class="form-group">
@@ -53,8 +53,8 @@
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
                                         <label for="exampleInputPassword1">لوجو المكتب</label>
-                                        <input asp-for="ApprovedOfficeLogo" required  type="file" name="files" id="selectedFile" />
-                                        
+                                        <input  required  type="file" name="files" id="selectedFile" />
+                                        <div class="text-danger" id="error"></div>
                                     </div>
                                    
                                 </div>
@@ -64,8 +64,8 @@
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
                                         <label for="exampleInputPassword1">ملف الرخصة</label>
-                                        <input asp-for="ApprovedOfficeLicenseDoc" required type="file" name="filess" id="selectedFile" />
-
+                                        <input  required type="file" name="filess" id="selectedFiles" />
+                                        <div class="text-danger" id="error1"></div>
                                     </div>
 
                                 </div>
@@ -101,4 +101,44 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
      
     }
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script>
+        //alert("ahmed");
+        const logo = document.getElementById('selectedFile');
+        const license = document.getElementById('selectedFiles');
+        const form = document.getElementById('form')
+        const erroElement = document.getElementById('error')
+        const erroElement1 = document.getElementById('error1')
+        form.addEventListener('submit',(e)=> 
+        {
+            //e.preventDefault();
+            let messages =[];
+            let messages2 = [];
+            if (logo.value === '' || logo.value == null) 
+            {
+                //alert('ahmed');
+                messages.push('This field is required');
+                erroElement.innerHTML = messages;
+            }
+            else 
+            {
+                messages =[];
+                erroElement.innerHTML = messages;
+
+            }
+            if (license.value === '' || license.value == null) {
+                //alert('ahmed');
+                messages2.push('This field is required');
+                erroElement1.innerHTML = messages2;
+            }
+            else {
+                messages = [];
+                erroElement1.innerHTML = messages2;
+
+            }
+
+
+        });
+    </script>
     }
