--- a/AlMohamyProject/wwwroot/Templates/ForgotPassword.html
+++ b/AlMohamyProject/wwwroot/Templates/ForgotPassword.html
@@ -8,7 +8,7 @@
     <p>
         Hellow {{userName}},<br />
         click on the following link to reset password. <br /> <br />
-        <a href="https://localhost:44347/Account/ResetPassword?UserId={{link1}}&Code={{link2}}">Reset Password</a>
+        <a href="https://bookecommerce.com/Account/ResetPassword?UserId={{link1}}&Code={{link2}}">Reset Password</a>
         <!--<a href="https://system.eibtek.com/Account/ResetPassword?UserId={{link1}}&Code={{link2}}">Reset Password</a>-->
         <!--<a href=" https://alsalamtravel.co.uk/Account/ResetPassword?UserId={{link1}}&Code={{link2}}">Reset Password</a>-->
     </p>
