--- a/AlMohamyProject/Areas/Admin/Views/PoliciesAndPrivacy/Form.cshtml
+++ b/AlMohamyProject/Areas/Admin/Views/PoliciesAndPrivacy/Form.cshtml
@@ -39,8 +39,8 @@
                                 <span asp-validation-for="PoliciesAndPrivacyTitle" class="text-danger"></span>
                   </div>
                   <div class="form-group">
-                                <label for="exampleInputPassword1">تفاصيل عن التطبيق</label>
-                                <input required type="text" class="form-control" id="exampleInputPassword1" asp-for="PoliciesAndPrivacyDescription" placeholder="تفاصيل عن التطبيق">
+                                <label for="exampleInputPassword1">تفاصيل السياسة و الخصوصية</label>
+                                <input required type="text" class="form-control" id="exampleInputPassword1" asp-for="PoliciesAndPrivacyDescription" placeholder="تفاصيل السياسة و الخصوصية">
                                 <span asp-validation-for="PoliciesAndPrivacyDescription" class="text-danger"></span>
                   </div>
                             <section class="content">
